# safenetai7

./: .gitignore  LICENSE  README.md  package-lock.json
email/: .gitignore  README.md  agents.md  config.py  gmail_client.py  label_manager.py  main.py  pyproject.toml  requirements.txt  start_mcp_tcp.py  watch_manager.py
email/data/: download_dataset.py
email/frontend/: index.html  package.json  tailwind.config.js
email/frontend/src/: App.tsx  index.css
email/frontend/src/components/: ActiveDatabase.tsx  PendingApprovals.tsx
email/pipeline/: __init__.py  email_parser.py  l1_authentication.py  l2_heuristics.py  l2_nlp.py  l3_threat_intel.py  mcp_client.py  orchestrator.py  scoring.py  warning_composer.py
mlmodel/app/: main.py
mlmodel/app/models/: link_model.pkl  link_vectorizer.pkl  offer_metadata.json  offer_model.pkl  offer_tfidf.pkl
mlmodel/app/routers/: offer_scan.py
mlmodel/datasets/: generate_dataset.py  offer_messages.csv  offer_messages_extra.csv  offer_messages_generated.csv
mlmodel/train/: train_offer_model.py
safenetai/: package-lock.json
safenetai/extension-build/: manifest.json  popup.html  popup.js
safenetai/src/components/safenet/: dashboard-client.tsx
safenetai/src/server/api/routers/: scan.ts
whatsapp-bot/: backend.js  server.js
